# howmanywinsdoesbrucebochyhave

./: .dockerignore  .gitignore  AGENTS.md  Dockerfile  Makefile  README.md  pyproject.toml
.github/workflows/: lint-and-test.yaml  publish.yaml
docs/plans/: 2026-04-01-modernization.md  2026-04-01-team-themes-and-trophies-design.md
howmanywinsdoesbrucebochyhave/: __init__.py  howmanywinsdoesbrucebochyhave.py
static/css/: styles.css
templates/: index.html
test/: conftest.py  test_howmanywinsdoesbrucebochyhave.py
